--- a/docs/todo.org
+++ b/docs/todo.org
@@ -8,12 +8,12 @@ SignalListItemFactory actually might be a valid work arround..
 ** opacity when open or something else
 ** light dark toggle
 * DONE Better status bar
-* Better shortcuts
+* DONE Better shortcuts
 ** Shortcuts window
 * DONE Save settings (width & height & mines configs)
 * DONE Fixed size for cells (char size is affecting!)
 just add padding as px
 * DONE Change MinesType bits
 * DONE Same color headerbar
-* Complete game logic, win, lose, etc..
+* DONE Complete game logic, win, lose, etc..
 * Add flags!
